--- a/styles/style.css
+++ b/styles/style.css
@@ -4,8 +4,23 @@
   box-sizing: border-box;
 }
 
-html {
-  block-size: 100%;
+html, body {
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  display: flex;
+  justify-content: center;
+  background-color: #1b1919;
+}
+
+body {
+  min-height: 100vh;
+  margin: 0;
+  background-color: #1b1919;
+  padding-top: 40px;
 }
 
 h1,
@@ -28,19 +43,15 @@ ol {
 }
 
 .page {
-  display: flex;
-  justify-content: center;
-  margin: 0;
   background-color: #1b1919;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
-  min-height: 100vh;
-  align-items: center;
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 265px;
+  max-width: 1200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 148px;
   padding-right: 60px;
 }
 
