--- a/styles/style.css
+++ b/styles/style.css
@@ -4,25 +4,6 @@
   box-sizing: border-box;
 }
 
-html, body {
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  display: flex;
-  justify-content: center;
-  background-color: #1b1919;
-}
-
-body {
-  min-height: 100vh;
-  margin: 0;
-  background-color: #1b1919;
-  padding-top: 40px;
-}
-
 h1,
 h2,
 h3,
@@ -43,17 +24,18 @@ ol {
 }
 
 .page {
+  min-height: 100vh;
+  margin: 0 auto;
   background-color: #1b1919;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   max-width: 1200px;
-  width: 100%;
   display: flex;
-  flex-direction: column;
-  gap: 148px;
-  padding-right: 60px;
+  align-items: center;
+  justify-content: center;
 }
+
 
 .visually-hidden {
   position: absolute;
@@ -109,6 +91,10 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 0px;
+}
+
+.search-form__fieldset:nth-of-type(2) {
+  padding-left: 35px;
 }
 
 .search-form__fieldset-title {
@@ -194,7 +180,7 @@ ol {
   line-height: 1;
   cursor: pointer;
   transition: all 0.3s ease;
-  margin: 19px 0 0 34px;
+  margin: 19px 0 0 30px;
 }
 
 .button:hover {
@@ -215,6 +201,8 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 0px;
+  width: 100%;
+  height: 100%;
 }
 
 .title {
