--- a/styles/style.css
+++ b/styles/style.css
@@ -230,7 +230,8 @@ ol {
   margin: 0;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 12px;
+  padding-top: 0px;
 }
 
 .content__card-link {
