--- a/styles/style.css
+++ b/styles/style.css
@@ -184,7 +184,15 @@ ol {
 }
 
 .more-button {
-  width: 92%;
+  width: 390px;
+  height: 34px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0 auto;
 }
 
 .button:hover {
@@ -230,7 +238,6 @@ ol {
   margin-top: 24px;
   background-color: #1b1919;
   border: 1px solid transparent;
-  scrollbar-width: thin;
   scrollbar-color: #d9d9d9 rgba(217, 217, 217, 0.1);
 }
 
@@ -240,15 +247,6 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 17px;
-}
-
-.content__list-container::-webkit-scrollbar-track {
-  background: rgba(217, 217, 217, 0.1);
-}
-
-.content__list-container::-webkit-scrollbar-thumb {
-  background-color: #d9d9d9;
-  border-radius: 2px;
 }
 
 .content__list-item {
@@ -266,7 +264,7 @@ ol {
 
 .content__card-link:focus {
   outline: none;
-  border: 1px solid #fff;
+  background-color: #545050;
 }
 
 .content__card-link {
@@ -318,8 +316,8 @@ ol {
 
 .content__video-card-thumbnail {
   object-position: center;
-  width: 194px;
-  height: 103px;
+  width: 195px;
+  height: 102px;
   object-fit: cover;
 }
 
