--- a/styles/style.css
+++ b/styles/style.css
@@ -192,7 +192,9 @@ ol {
   align-items: center;
   justify-content: center;
   padding: 0;
-  margin: 0 auto;
+  margin: 0px auto;
+  margin-top: 20px;
+  margin-left: 22px;
 }
 
 .button:hover {
